@@ -23,6 +23,7 @@ INDEX=Index
 INFORMATION=Information
 LATEST VERSION CHECK=Latest Version Check
 LICENSE=License
+LOG DIRECTORY=Log Directory
 MAGIC QUOTES=Magic Quotes
 MBSTRING ENABLED=Mbstring Enabled
 JOOMLA! VERSION=Joomla! Version
@@ -46,6 +47,7 @@ STATUS=Status
 SUPPORT=Support
 SYSTEM INFO=System Info
 SYSTEM INFORMATION=System Information
+TEMP DIRECTORY=Temp Directory
 USER AGENT=User Agent
 VALUE=Value
 WEB SERVER=Web Server
@@ -53,3 +55,5 @@ WEBSERVER TO PHP INTERFACE=Web Server to PHP interface
 WYSIWYG EDITOR=WYSIWYG Editor
 XML ENABLED=XML Enabled
 ZLIB ENABLED=Zlib Enabled
+TEMP DIRECTORY=Temp Directory
+LOG DIRECTORY=Log Directory
